<resources>
    <string name="app_name">PokeMapper</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="password_confirm">Wachtwoord bevestigen</string>
    <string name="name">Voornaam</string>
    <string name="surname">Achternaam</string>
    <string name="register">Registreren</string>
    <string name="add_marker">Marker toevoegen</string>
    <string name="pick_location">Geef hieronder aan of het om een Pokéstop gaat of om een Pokémon.</string>
    <string name="pokestop">Pokéstop</string>
    <string name="pokemon">Pokémon</string>
    <string name="action_settings">Action settings</string>
    <string name="action_logout">Uitloggen</string>
    <string name="add">Toevoegen</string>
    <string name="mapper_logo">PokéMapper logo</string>
</resources>
