<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.hees.pokemapper.activity.AddActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_marker"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvPickLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:text="@string/pick_location" />

    <RadioGroup
        android:id="@+id/rgPickLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPickLocation"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbPokestop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokestop" />

        <RadioButton
            android:id="@+id/rbPokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pokemon" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rgPickLocation"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/spPokemon"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
